# OpenGL-model-viewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: helper.h
lib/: helper.cpp
src/MyProgram/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyProgram.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/MyProgram/resources/: cube.mtl  debug_depth.frag  debug_depth.vert  depth.vert  floor.mtl  lightcube.frag  lightcube.vert  necoarc.mtl  shader.frag  shader.vert
